[package]
name = "shiratsu"
version = "2.0.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
shiratsu-lib = { path = "./src/shiratsu-lib" }
rusqlite = { version = "0.23.1", features = ["backup", "bundled"] }
uuid = { version = "0.8", features = ["v4"] }