[package]
name = "shiratsu"
version = "2.0.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]

# shiratsu core
shiratsu-lib = { path = "./src/shiratsu-lib" }

# shiragame database creation
rusqlite = { version = "0.23.1", features = ["backup", "bundled"] }
uuid = { version = "0.8", features = ["v4"] }

# ingest
walkdir = "2"

# logging
slog = "2"
slog-async = "2"
slog-term = "2"
slog-stdlog = "4"
slog-scope = "4"
log = "0.4"

# progress
indicatif = "0.14.0"
colored = "1.9"
console = "0.11"
lazy_static = "1.4"
