[package]
name = "shiratsu"
version = "2.1.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]

# shiratsu core
shiratsu-parse = { path = "src/shiratsu-parse" }
shiratsu-stone = { path = "./src/shiratsu-stone" }

# shiragame database creation
rusqlite = { version = "0.23.1", features = ["backup", "bundled"] }
uuid = { version = "0.8", features = ["v4"] }

# ingest
walkdir = "2"

# logging
slog = "2"
slog-async = "2"
slog-term = "2"
slog-stdlog = "4"
slog-scope = "4"
log = "0.4"

# progress
indicatif = "0.14.0"
colored = "1.9"
console = "0.11"
lazy_static = "1.4"

# sorting
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.3.0"
lazy-static-include = "2.2"

# errors
anyhow = "1"
