[package]
name = "shiratsu-naming"
version = "0.1.7"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
repository = "https://github.com/SnowflakePowered/shiratsu/tree/master/shiratsu-naming"
license = "MIT"
categories = ["parser-implementations", "parsing", "emulators", "text-processing", "games"]
readme = "README.md"
description = "Zero-copy file name parser for No-Intro, TOSEC, and GoodTools named ROM files."
[dependencies]
# Statics
phf = { version = "0.11", features = ["macros"] }

# Parsing
nom = { version = "7", features = ["alloc"] }
indexmap = "1"
