[package]
name = "shiratsu-lib"
version = "0.1.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
lazy-static-include = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.8", features = ["macros"] }
indexmap = "1.3"
quick-xml = { version = "0.18", features = [ "serialize" ] }
tinyvec = "0.3"
nom = "6.0.0-alpha1"
regex = "1"
