[package]
name = "shiratsu-lib"
version = "0.1.0"
authors = ["Ronny Chan <ronny6993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Statics
lazy_static = "1.4"
lazy-static-include = "2.2"
phf = { version = "0.8", features = ["macros"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.18", features = [ "serialize" ] }

# Parsing
nom = { version = "6", features = ["regexp"] }
indexmap = "1.3"
regex = "1"
fancy-regex = "0.3" # tosec lies.
array_iterator = "0.2"

# pin funty
funty = "=1.1.0"