[package]
name = "shiratsu-parse"
version = "0.1.0"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
edition = "2018"
repository = "https://github.com/SnowflakePowered/shiratsu"
license = "MIT"

[features]
default = []

legacy-parser = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Statics
lazy_static = "1.4"
lazy-static-include = "2.2"
phf = { version = "0.8", features = ["macros"] }

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }

# Parsing
nom = { version = "6" }
indexmap = "1.3"
array_iterator = "0.2"

# todo: only enable when using legacy parsers
regex = "1"
fancy-regex = "0.5" # tosec lies.

# pin funty
funty = "=1.1.0"